fix: align roadmap title

--- a/src/components/sections/Roadmap/style.module.scss
+++ b/src/components/sections/Roadmap/style.module.scss
@@ -12,6 +12,7 @@
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  align-items: center;
 }
 
 .title {
